signup,login,and designs are completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!-- <app-root></app-root> -->
 <router-outlet></router-outlet>
+<!-- <app-login></app-login> -->
+<!-- <app-otp></app-otp> -->
+<!-- <app-home></app-home> -->
+<!-- <app-newpassword></app-newpassword> -->
