--- a/src/app/component/home/home.component.html
+++ b/src/app/component/home/home.component.html
@@ -1,1 +1,173 @@
-<p>home works!</p>
+
+
+
+  <!-- Navbar -->
+  <nav class="bg-stone-800 text-white p-4">
+    <div class="container mx-auto flex justify-between items-center">
+      <a href="#">
+        <img class="h-12" src="../../../assets/images/restoreradiance-high-resolution-logo-black.png" alt="Logo">
+      </a>
+      <ul class="flex space-x-4">
+        <li><a href="#" class="hover:text-gray-300 font-inknut">DESIGN</a></li>
+        <li><a href="#" class="hover:text-gray-300 font-inknut">PROJECT</a></li>
+        <li><a href="#" class="hover:text-gray-300 font-inknut">CONTACT</a></li>
+      </ul>
+    </div>
+  </nav>
+
+  <!-- Hero Section -->
+  <header class="bg-stone-800 text-white py-20">
+    <div class="container mx-auto text-center">
+      <h1 class="text-4xl font-bold font-inknut mb-4 transition duration-300 hover:text-stone-400">Welcome to Restore Radiance Home Renovation</h1>
+      <p class="text-lg font-thin font-sans ">We bring your dream home to reality</p>
+      <a href="/signup" class="inline-block mt-4 bg-stone-600 hover:bg-stone-700 text-white font-bold py-2 px-6 rounded">Get Started</a>
+    </div>
+  </header>
+
+
+  <div class="relative">
+    <img src="../../../assets/images/Jewkes-Design_Black-Modern-House_.webp" class="w-full" alt="Your Image">
+    <div class="absolute inset-0 flex items-center justify-center bg-black bg-opacity-10">
+      <div class="text-white p-4">
+        <h2 class="text-3xl font-serif">
+          "Crafting Your Vision, Building Your Dream."</h2><br>
+        <p class="text- text-x font-thin">At Restore Radiance we specialize in transforming houses into homes. With a blend of creativity and craftsmanship,
+           we turn your renovation dreams into reality<br>
+           we guide you through every step of the process with meticulous attention to detail and a commitment to quality. <br>
+            Our team works closely with you to understand your needs and preferences, delivering personalized solutions tailored to your unique requirements. <br>
+             With years of experience and a focus on innovation, we create spaces that enhance your lifestyle and stand the test of time. <br>
+              Welcome to a world of possibilities, where every renovation is a masterpiece in the making.</p>
+      </div>
+    </div>
+  </div>
+
+  <section class="bg-stone-800 py-16">
+    <div class="container mx-auto relative px-6 pt-8 pb-8">
+      <!-- Picture with opacity -->
+      <img src="../../../assets/images/luxury.jpg" alt="Your Image" class="absolute inset-0 w-full h-full opacity-50 object-cover">
+  
+      <!-- Text and boxes -->
+      <div class="relative z-10">
+        <h2 class="text-3xl text-center mb-8 text-white font-serif transition duration-300 hover:text-stone-500 ">WE'LL PROVIDE YOU ALL YOU WANTED IF YOU TRUST US!</h2>
+
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
+          <div class="bg-white bg-opacity-20 p-6 rounded-md shadow-lg transition duration-300 hover:bg-opacity-50 transform hover:-translate-y-2">
+            <h3 class="text-xl font-semibold mb-4">SPACE PLANNING</h3>
+            <p>
+              Space planning is the art of maximizing the functionality and flow of a space while ensuring it remains visually pleasing. It involves carefully arranging furniture, fixtures, and other elements to optimize the use of available space and meet the needs of its occupants. From homes to offices, effective space planning enhances comfort, efficiency, and overall usability, making every square foot count.
+            </p>
+          </div> 
+          <div class="bg-white bg-opacity-20 p-6 rounded-md shadow-lg transition duration-300 hover:bg-opacity-50 transform hover:-translate-y-2">
+            <h3 class="text-xl font-semibold mb-4">CUSTOM DESIGNING</h3>
+            <p>
+              Custom designing is the process of tailoring design solutions to meet specific needs and preferences. It involves creating unique and personalized designs that reflect individual tastes, lifestyles, and requirements. Whether it's a room layout or an entire home renovation, custom designing allows for creative expression and ensures that every detail is crafted to perfection. It adds a personal touch and transforms spaces into true reflections of individual style and personality.
+            </p>
+          </div>
+          <div class="bg-white bg-opacity-20 p-6 rounded-md shadow-lg transition duration-300 hover:bg-opacity-50 transform hover:-translate-y-2">
+            <h3 class="text-xl font-semibold mb-4">TEAM WORK</h3>
+            <p>
+              Teamwork is the cornerstone of successful projects. It involves pooling together diverse skills, expertise, and perspectives to tackle challenges and drive innovation. Effective teamwork fosters communication, trust, and mutual support among team members. In home renovation, teamwork ensures that projects are executed smoothly, deadlines are met, and clients' expectations are exceeded through coordinated efforts and shared commitment to excellence.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  
+
+  <section class="py-16">
+    <div class="container mx-auto">
+      <h2 class="text-3xl text-center mb-8 font-inknut font-semibold">Celeberate With us</h2>
+      <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-6">
+        <div class="overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-105">
+          <img src="../../../assets/images/whitee.jpg" alt="Model 1"  class="w-full h-auto"><p class="font-inknut font-bold">"Every detail tells a story in a beautifully designed home."
+          </p>
+        </div>
+        <div class="overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-105 mt-14">
+          <img src="../../../assets/images/luxury.jpg" alt="Model 2" class="w-full h-auto">
+        </div>
+        <div class="overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-105">
+          <img src="../../../assets/images/entry.jpg" alt="Model 3" class="w-full h-auto"> <p class="font-inknut font-bold">"Good design is making something beautiful and functional."
+          </p>
+
+        </div>
+        <div class="overflow-hidden rounded-lg shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-105 mt-14">
+          <img src="../../../assets/images/black luxury house.jpg" alt="Model 2" class="w-full h-auto">
+        </div>
+      </div>
+    </div>
+  </section>
+  <br><br><br>
+  <footer class="bg-stone-800 py-8">
+    <div class="container mx-auto grid grid-cols-2 md:grid-cols-3 gap-4">
+      <div class="col-span-2 md:col-span-1 border-b border-white md:border-b-0 md:border-r">
+        <h3 class="text-white text-lg font-semibold mb-4 font-inknut text-[25px]">RestoreRadiance</h3><br><br>
+        <p class="text-gray-300  font-serif">RestoreRadiance is your partner in creating stunning living spaces. With a focus on innovation , we bring your vision to life with meticulous attention to detail.  our skilled team delivers exceptional results that exceed expectations. Let us illuminate your home's potential and restore its radiance.</p>
+      </div>
+      <div class="col-span-2 md:col-span-1 border-b border-white md:border-b-0 md:border-r">
+        <h3 class="text-white text-lg font-semibold font-inknut text-[25px] mb-4">Navigation</h3><br><br>
+        <ul>
+          <li><a href="#" class="text-gray-300 hover:text-white font-serif">Designs</a></li>
+          <li><a href="#" class="text-gray-300 hover:text-white font-serif">Contact</a></li>
+          <li><a href="#" class="text-gray-300 hover:text-white font-serif">Team</a></li>
+          <li><a href="#" class="text-gray-300 hover:text-white font-serif">Project</a></li>
+        </ul>
+      </div>
+      <div class="col-span-2 md:col-span-1 border-gray-700">
+        <h3 class="text-white text-lg font-semibold mb-4 font-inknut text-[25px]">Follow Us</h3><br><br>
+        <ul class="flex flex-col">
+          <li class="mr-4">
+            <a href="#" class="text-gray-300 hover:text-white">
+              <i class="fab fa-linkedin"></i> 
+              <span class="ml-1 font-serif">@RestoreRadiance</span>
+            </a>
+          </li>
+          <li class="mr-4">
+            <a href="#" class="text-gray-300 hover:text-white">
+              <i class="fab fa-instagram"></i> 
+              <span class="ml-1 font-serif">@RestoreRadiance</span>
+            </a>
+          </li>
+          <li class="mr-4">
+            <a href="#" class="text-gray-300 hover:text-white">
+              <i class="fab fa-facebook"></i>
+              <span class="ml-1  font-serif">@RestoreRadiance</span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="text-gray-300 hover:text-white">
+              <i class="fab fa-youtube"></i>
+              <span class="ml-1 font-serif">@RestoreRadiance</span>
+            </a>
+          </li>
+        </ul>
+        
+      </div>
+    </div>
+    <br><br>
+
+      <div class="container mx-auto text-center text-white">
+        <p class="font-inknut">&copy; 2022 Home Renovation. All rights reserved.</p>
+      </div>
+    
+  </footer>
+  
+  
+  
+  
+  
+
+  
+ 
+
+
+
+
+
+
+
+
+
+
+
+
