admin part completed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,3 +4,4 @@
 <!-- <app-otp></app-otp> -->
 <!-- <app-home></app-home> -->
 <!-- <app-newpassword></app-newpassword> -->
+<!-- <app-entryhome></app-entryhome> -->
