--- a/src/app/component/newpassword/newpassword.component.html
+++ b/src/app/component/newpassword/newpassword.component.html
@@ -3,10 +3,10 @@
       <h1 class="text-2xl font-bold mb-2 text-center">Reset Password</h1>
       <p class="text-sm text-stone-600 mb-6 text-center">Enter your new password below.</p>
   
-      <form #resetPasswordForm="ngForm" (ngSubmit)="onSubmit()">
+      <form #resetPasswordForm="ngForm" (ngSubmit)="resetpassword()">
         <div class="mb-4">
           <label for="password" class="block text-stone-700 text-sm font-bold mb-2">New Password</label>
-          <input type="password" id="password" name="password" [(ngModel)]="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
+          <input type="password" id="password" name=" password" [(ngModel)]="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" required>
         </div>
   
         <div class="mb-4">
