--- a/src/app/component/entryhome/entryhome.component.html
+++ b/src/app/component/entryhome/entryhome.component.html
@@ -39,7 +39,9 @@
                 <div class="bg-white p-8 rounded-lg shadow-md">
                     <h3 class="text-xl font-semibold font-inknut mb-4">User Registration</h3>
                     <p class="text-gray-600 mb-4">Register for uploading your house and budget</p>
-                    <a href="/user-registration" class="bg-stone-700 text-white font-semibold py-2 px-6  hover:bg-stone-800">Register For Renovation</a>
+                    <div class="flex justify-between">
+                    <a href="/user-registration" class="bg-stone-700 text-white font-semibold py-2 px-6  hover:bg-stone-800">Register For Renovation</a><a (click)="checkRegistration()" class="bg-stone-700 text-white font-semibold py-2 px-6  hover:bg-stone-800">upload</a>
+                  </div>
                 </div>
             </div>
         </div>
